--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -119,19 +119,12 @@
     "\n",
     "`docker run --name Neo4JHW2025 -p 7474:7474 -p 7687:7687 -d -v \"C:\\Users\\André Silvestre\\OneDrive - NOVAIMS\\MDSAA-DS_1ºAno\\2º Semestre\\5E_Big Data Modelling and Managment_[BDMM]\\[BDMM]_Assignment1&2\\data\\Neo4JPlugins\":/plugins -v \"C:\\Users\\André Silvestre\\OneDrive - NOVAIMS\\MDSAA-DS_1ºAno\\2º Semestre\\5E_Big Data Modelling and Managment_[BDMM]\\[BDMM]_Assignment1&2\\data\\NEW_VERSION\\data\":/data --env NEO4J_AUTH=neo4j/test --env NEO4J_dbms_connector_https_advertised__address=\"localhost:7473\" --env NEO4J_dbms_connector_http_advertised__address=\"localhost:7474\" --env NEO4J_dbms_connector_bolt_advertised__address=\"localhost:7687\" --env NEO4J_dbms_security_procedures_unrestricted=gds.* --env NEO4J_dbms_security_procedures_allowlist=\"gds.*\" neo4j:4.4.5`\n",
     "\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "\n",
-    "`docker run --name Neo4JHW2025 -p 7474:7474 -p 7687:7687 -d -v \"C:\\Users\\André Silvestre\\OneDrive - NOVAIMS\\MDSAA-DS_1ºAno\\2º Semestre\\5E_Big Data Modelling and Managment_[BDMM]\\[BDMM]_Assignment1&2\\data\\Neo4JPlugins\":/plugins -v \"C:\\Users\\André Silvestre\\OneDrive - NOVAIMS\\MDSAA-DS_1ºAno\\2º Semestre\\5E_Big Data Modelling and Managment_[BDMM]\\[BDMM]_Assignment1&2\\data\\NEW_VERSION\\data\":/data --env NEO4J_AUTH=neo4j/test --env NEO4J_dbms_connector_https_advertised__address=\"localhost:7473\" --env NEO4J_dbms_connector_http_advertised__address=\"localhost:7474\" --env NEO4J_dbms_connector_bolt_advertised__address=\"localhost:7687\" --env NEO4J_dbms_memory_heap_max_size=8G --env NEO4J_dbms_memory_heap_initial_size=8G  --env NEO4J_dbms_security_procedures_unrestricted=gds.* --env NEO4J_dbms_security_procedures_allowlist=\"gds.*\" neo4j:4.4.5`\n",
-    "\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:45:57.447501Z",
@@ -155,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:09.652569Z",
@@ -171,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:10.939324Z",
@@ -185,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:14.291655Z",
@@ -202,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +821,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- All **labels** have the same `Min_PropertyCount` and `Max_PropertyCount`, *so we can assume that all nodes have the same properties*."
+    "- All **labels** have the same `Min_PropertyCount` and `Max_PropertyCount`, *so we can assume that all nodes have the same properties*.\n",
+    "\n",
+    "\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "\n",
+    "# **ALTERAR**\n",
+    "\n",
+    "- Explicar melhor os orfaos nodes\n",
+    "- Explicar melhor o `Min_PropertyCount` and `Max_PropertyCount`\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1850,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2333,7 +2336,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert BEERS.retired to boolean format\n",
+    "query = \"\"\"\n",
+    "    MATCH (r:BEERS)\n",
+    "    SET r.retired = CASE \n",
+    "            WHEN toLower(trim(r.retired)) = 't' THEN true \n",
+    "            WHEN toLower(trim(r.retired)) = 'f' THEN false \n",
+    "            ELSE r.retired\n",
+    "        END \n",
+    "\"\"\"\n",
+    "result = execute_write(driver, query)\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record n.retired=False>,\n",
+      " <Record n.retired=False>,\n",
+      " <Record n.retired=True>,\n",
+      " <Record n.retired=False>,\n",
+      " <Record n.retired=False>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify the changes\n",
+    "query = \"\"\"\n",
+    "    MATCH (n:BEERS)\n",
+    "    RETURN n.retired\n",
+    "    LIMIT 5\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2347,7 +2405,7 @@
       "Node Label: :`BEERS`        | Property: id              | Type(s): Long                 | Mandatory: True\n",
       "Node Label: :`BEERS`        | Property: name            | Type(s): String               | Mandatory: True\n",
       "Node Label: :`BEERS`        | Property: notes           | Type(s): String               | Mandatory: True\n",
-      "Node Label: :`BEERS`        | Property: retired         | Type(s): String               | Mandatory: True\n",
+      "Node Label: :`BEERS`        | Property: retired         | Type(s): Boolean              | Mandatory: True\n",
       "Node Label: :`BEERS`        | Property: state           | Type(s): String               | Mandatory: True\n",
       "Node Label: :`BREWERIES`    | Property: id              | Type(s): Long                 | Mandatory: True\n",
       "Node Label: :`BREWERIES`    | Property: name            | Type(s): String               | Mandatory: True\n",
@@ -2447,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2483,8 +2541,6 @@
     "\"\"\"\n",
     "result = execute_read(driver, query)\n",
     "pprint(result)\n",
-    "\n",
-    "\n",
     "\n",
     "query = \"\"\"\n",
     "    // Verify if the duplicate nodes have the same relationships\n",
@@ -2702,6 +2758,57 @@
    "metadata": {},
    "source": [
     "> In total we have $200$ duplicate **`COUNTRIES`** ($\\frac{200}{400} = 50\\%$)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adicional checking: Making sure if the ISO codes are real/valid\n",
+    "query = \"\"\"\n",
+    "        MATCH (c:COUNTRIES)\n",
+    "        WHERE NOT c.code IN ['AD', 'AE', 'AF', 'AG', 'AI', 'AL', 'AM', 'AO', 'AQ', 'AR', 'AS', 'AT', 'AU', 'AW', \n",
+    "            'AX', 'AZ', 'BA', 'BB', 'BD', 'BE', 'BF', 'BG', 'BH', 'BI', 'BJ', 'BL', 'BM', 'BN', 'BO', 'BQ', 'BR', \n",
+    "            'BS', 'BT', 'BV', 'BW', 'BY', 'BZ', 'CA', 'CC', 'CD', 'CF', 'CG', 'CH', 'CI', 'CK', 'CL', 'CM', 'CN', \n",
+    "            'CO', 'CR', 'CU', 'CV', 'CW', 'CX', 'CY', 'CZ', 'DE', 'DJ', 'DK', 'DM', 'DO', 'DZ', 'EC', 'EE', 'EG', \n",
+    "            'EH', 'ER', 'ES', 'ET', 'FI', 'FJ', 'FK', 'FM', 'FO', 'FR', 'GA', 'GB', 'GD', 'GE', 'GF', 'GG', 'GH', \n",
+    "            'GI', 'GL', 'GM', 'GN', 'GP', 'GQ', 'GR', 'GS', 'GT', 'GU', 'GW', 'GY', 'HK', 'HM', 'HN', 'HR', 'HT', \n",
+    "            'HU', 'ID', 'IE', 'IL', 'IM', 'IN', 'IO', 'IQ', 'IR', 'IS', 'IT', 'JE', 'JM', 'JO', 'JP', 'KE', 'KG', \n",
+    "            'KH', 'KI', 'KM', 'KN', 'KP', 'KR', 'KW', 'KY', 'KZ', 'LA', 'LB', 'LC', 'LI', 'LK', 'LR', 'LS', 'LT', \n",
+    "            'LU', 'LV', 'LY', 'MA', 'MC', 'MD', 'ME', 'MF', 'MG', 'MH', 'MK', 'ML', 'MM', 'MN', 'MO', 'MP', 'MQ', \n",
+    "            'MR', 'MS', 'MT', 'MU', 'MV', 'MW', 'MX', 'MY', 'MZ', 'NA', 'NC', 'NE', 'NF', 'NG', 'NI', 'NL', 'NO', \n",
+    "            'NP', 'NR', 'NU', 'NZ', 'OM', 'PA', 'PE', 'PF', 'PG', 'PH', 'PK', 'PL', 'PM', 'PN', 'PR', 'PS', 'PT', \n",
+    "            'PW', 'PY', 'QA', 'RE', 'RO', 'RS', 'RU', 'RW', 'SA', 'SB', 'SC', 'SD', 'SE', 'SG', 'SH', 'SI', 'SJ', \n",
+    "            'SK', 'SL', 'SM', 'SN', 'SO', 'SR', 'SS', 'ST', 'SV', 'SX', 'SY', 'SZ', 'TC', 'TD', 'TF', 'TG', 'TH', \n",
+    "            'TJ', 'TK', 'TL', 'TM', 'TN', 'TO', 'TR', 'TT', 'TV', 'TW', 'TZ', 'UA', 'UG', 'UM', 'US', 'UY', 'UZ', \n",
+    "            'VA', 'VC', 'VE', 'VG', 'VI', 'VN', 'VU', 'WF', 'WS', 'YE', 'YT', 'ZA', 'ZM', 'ZW']\n",
+    "        RETURN c.name\n",
+    "\"\"\"\n",
+    "\n",
+    "result = execute_read(driver, query)\n",
+    "\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "\n",
+    "### **COMENTAR**\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -3632,6 +3739,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "\n",
+    "### **MISSING VALUES**\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'0 node beers with NULL values'\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "    MATCH (r:BEERS)\n",
+    "    WHERE r.name IS NULL\n",
+    "        OR toLower(trim(r.name)) IN ['nan', \"null\", '', ' ', 'None']\n",
+    "        OR r.notes IS NULL\n",
+    "        OR toLower(trim(r.notes)) IN ['nan', \"null\", '', ' ', 'None']\n",
+    "        OR r.state IS NULL\n",
+    "        OR toLower(trim(r.state)) IN ['nan', \"null\", '', ' ', 'None']\n",
+    "        OR r.availability IS NULL\n",
+    "        OR toLower(trim(r.availability)) IN ['nan', \"null\", '', ' ', 'None']\n",
+    "    RETURN COUNT(*)\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "count = result[0][0]\n",
+    "pprint(f\"{count:,} node beers with NULL values\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -3891,6 +4040,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "### **MELHORAR PARA GARANTIR QUE TODOS NÃO TÊM PROPRIEDADES**\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REVIEW nodes without relationships - Count and 2 examples:\n",
+      "[<Record id(r)=921375 r={}>, <Record id(r)=921921 r={}>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2.3 - REVIEW nodes without relationships & USER nodes without relationships\n",
+    "query = \"\"\"\n",
+    "    // Count and sample REVIEW nodes without relationships\n",
+    "    MATCH (r:REVIEWS)\n",
+    "    WHERE NOT EXISTS { (r)-[]-() }\n",
+    "    RETURN id(r), r{.*}\n",
+    "    LIMIT 2\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "print(\"REVIEW nodes without relationships - Count and 2 examples:\")\n",
+    "pprint(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3925,9 +4113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
     "\n",
-    "# **Não percebi esta :( - Existem mas não existem 🤦‍♂️**\n",
+    "# **Não percebi esta :( - Existem mas não existem - ELIMINAR**\n",
     "\n",
     "</div>"
    ]
@@ -3975,7 +4163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3993,8 +4181,8 @@
     "# 2.3. BEERS.abv greater than 67.5\n",
     "query = \"\"\"\n",
     "    MATCH (b:BEERS)\n",
-    "    WHERE b.abv > 67.5\n",
-    "    RETURN b\n",
+    "    WHERE b.abv > 67.5 OR b.abv < 0\n",
+    "    RETURN b.name, b.abv\n",
     "    ORDER BY b.abv DESC\n",
     "\"\"\"\n",
     "result = execute_read(driver, query)\n",
@@ -4010,7 +4198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4025,7 +4213,7 @@
     "# 2.3. Remove nodes with BEERS.abv greater than 67.5\n",
     "query = \"\"\"\n",
     "    MATCH (b:BEERS)\n",
-    "    WHERE b.abv > 67.5\n",
+    "    WHERE b.abv > 67.5 OR b.abv < 0\n",
     "    DETACH DELETE b\n",
     "\"\"\"\n",
     "result = execute_write(driver, query)\n",
@@ -4057,6 +4245,43 @@
     "result = execute_read(driver, query)\n",
     "pprint(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **2.4. 🧹 Remove Missing Values**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Source: https://neo4j.com/docs/cypher-manual/current/clauses/remove/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **2.5. 📊 Change Schema** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4219,7 +4444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4245,7 +4470,7 @@
     "print(\"The top three breweries with the largest variety of beer styles are:\",\n",
     "      \"\\n - \\033[1m1st\\033[0m\", result[0][\"BreweryName\"], \"with\", result[0][\"StyleCount\"], \"styles.\",\n",
     "      \"\\n - \\033[1m2nd\\033[0m\", result[1][\"BreweryName\"], \"with\", result[1][\"StyleCount\"], \"styles.\",\n",
-    "      \"\\n - \\033[1m3rd\\033[0m\", result[2][\"BreweryName\"], \"with\", result[2][\"StyleCount\"], \"styles.\")\n"
+    "      \"\\n - \\033[1m3rd\\033[0m\", result[2][\"BreweryName\"], \"with\", result[2][\"StyleCount\"], \"styles.\")"
    ]
   },
   {
@@ -4292,6 +4517,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Market Analysis department in your company accesses and updates the trends data on the daily basis. \n",
+    "#   Given that, consider how you need to optimize the database and its performance so that the following queries are efficient. \n",
+    "#   Measure performance to communicate your improvements using PROFILE before final query. Answer the following: [4 points]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "\n",
+    "### **Escrever uma nota a dizer que já fizemos certas limpezas que potenciam a otimização das querys seguintes (NAs, Duplicates, Data Types)** (dizer que são exemplos)\n",
+    "\n",
+    "\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4306,9 +4555,6 @@
     }
    ],
    "source": [
-    "# 4. Market Analysis department in your company accesses and updates the trends data on the daily basis. \n",
-    "#   Given that, consider how you need to optimize the database and its performance so that the following queries are efficient. \n",
-    "#   Measure performance to communicate your improvements using PROFILE before final query. Answer the following: [4 points]\n",
     "#    4.1. Using ABV score, find 5 strongest beers, display their ABV score and the corresponding brewery? \n",
     "#          Keep in mind that the strongest known beer is Snake Venom, and deal with the error entries in the database.\n",
     "\n",
