--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -4259,7 +4259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Source: https://neo4j.com/docs/cypher-manual/current/clauses/remove/"
+    "# Source: https://neo4j.com/docs/cypher-manual/current/clauses/remove/\n",
+    "\n"
    ]
   },
   {
