Updates 10/3 (Corri tudo!)

--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -6438,9 +6438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 styles by smell + feel (optimized):\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "#     4.2. Using the answer from question 2 \n",
     "#               find the top 5 distict beer styles with \n",
@@ -6480,24 +6489,35 @@
     "#     result = execute_write(driver, query)\n",
     "#     pprint(result)\n",
     "\n",
-    "# # After Optimization (Indexes + Query Optimization)\n",
-    "# query = \"\"\"\n",
-    "#     PROFILE\n",
-    "#     MATCH (u:USER {name: 'kylehay2004'})-[:POSTED]->(r:REVIEWS)-[:REVIEWED]->(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
-    "#     WHERE r.smell IS NOT NULL AND r.feel IS NOT NULL\n",
-    "#     WITH s.name AS styleName, toFloat(r.smell) + toFloat(r.feel) AS smellFeel\n",
-    "#     RETURN styleName, avg(smellFeel) AS avgSmellFeel\n",
-    "#     ORDER BY avgSmellFeel DESC\n",
-    "#     LIMIT 5\n",
-    "# \"\"\"\n",
-    "# result = execute_read(driver, query)\n",
-    "# print(\"Top 5 styles by smell + feel (optimized):\")\n",
-    "# pprint(result)                                                          ## Time of Execution: 0.3s  "
+    "# After Optimization (Indexes + Query Optimization)\n",
+    "query = \"\"\"\n",
+    "    PROFILE\n",
+    "    MATCH (u:USER {name: 'kylehay2004'})-[:POSTED]->(r:REVIEWS)-[:REVIEWED]->(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
+    "    WHERE r.smell IS NOT NULL AND r.feel IS NOT NULL\n",
+    "    WITH s.name AS styleName, toFloat(r.smell) + toFloat(r.feel) AS smellFeel\n",
+    "    RETURN styleName, avg(smellFeel) AS avgSmellFeel\n",
+    "    ORDER BY avgSmellFeel DESC\n",
+    "    LIMIT 5\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "print(\"Top 5 styles by smell + feel (optimized):\")\n",
+    "pprint(result)                                                          ## Time of Execution: 0.3s  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "\n",
+    "# **Não percebi oq aconteceu aqui, mas deixou de funcionar**\n",
+    "\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6521,7 +6541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6539,7 +6559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
