Update - 4 certinha e com os outputs certo

--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:45:57.447501Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:09.652569Z",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:10.939324Z",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:14.291655Z",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6259,7 +6259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6279,7 +6279,7 @@
     "        rows_returned = summary.profile[\"args\"][\"Rows\"]\n",
     "\n",
     "        # Print the results for comparison\n",
-    "        print(f\"\\n:small_blue_diamond: {description} :small_blue_diamond:\")\n",
+    "        print(f\"\\n🔹 {description} 🔹\")\n",
     "        print(f\"Database Hits (DbHits): {db_hits}\")\n",
     "        print(f\"Cache Hits (PageCacheHits): {cache_hits}\")\n",
     "        print(f\"Estimated Rows: {estimated_rows}\")\n",
@@ -6296,11 +6296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to create a INDEX on a property\n",
+    "# https://neo4j.com/docs/cypher-manual/current/indexes/search-performance-indexes/managing-indexes/#list-indexes\n",
     "def create_index(driver, label, property):\n",
     "    query = f\"CREATE INDEX IF NOT EXISTS FOR (n:{label}) ON (n.{property})\"\n",
     "    return execute_write(driver, query)"
@@ -6308,7 +6309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6320,26 +6321,27 @@
     "# # Before Optimization -                                                                 See in BROWSER\n",
     "# query = \"\"\"\n",
     "#     // PROFILE the query to find the 5 strongest beers by ABV score\n",
-    "#     PROFILE MATCH (b:BEERS)-[:BREWED]-(br:BREWERIES)\n",
+    "#     PROFILE MATCH (br:BREWERIES)-[:BREWED]->(b:BEERS)\n",
     "#     WHERE b.abv IS NOT NULL\n",
     "#     RETURN b.name AS beerName, b.abv AS abv, br.name AS breweryName\n",
     "#     ORDER BY b.abv DESC\n",
     "#     LIMIT 5\n",
     "# \"\"\"\n",
     "# result = execute_read(driver, query)\n",
-    "# pprint(result)                                                               ## Time of Execution: 1.8s\n",
+    "# pprint(result)\n",
     "\n",
     "# # Create an index on the abv property of the BEERS nodes\n",
     "# query = \"\"\"\n",
-    "#     CREATE INDEX IF NOT EXISTS FOR (b:BEERS) ON (b.abv)    \n",
+    "#     CREATE INDEX IF NOT EXISTS FOR (b:BEERS) ON (b.abv)   // Create an index on the abv property of the BEERS nodes\n",
+    "# \"\"\"                                                       // If we wanna remove it, see the index name in SHOW INDEXES and DROP INDEX index_name\n",
     "# \"\"\"\n",
     "# result = execute_write(driver, query)\n",
     "# pprint(result)\n",
     "\n",
+    "\n",
     "# # After Optimization\n",
     "# query = \"\"\"\n",
     "#     // PROFILE the query to find the 5 strongest beers by ABV score\n",
-    "    \n",
     "#     PROFILE\n",
     "#     MATCH (br:BREWERIES)-[:BREWED]->(b:BEERS)\n",
     "#     WHERE b.abv > 0 AND b.abv <= 67.5 AND b.abv IS NOT NULL         // Filter out invalid ABV values (considering the highest valid ABV value)\n",
@@ -6348,12 +6350,12 @@
     "#     LIMIT 5\n",
     "# \"\"\"\n",
     "# result = execute_read(driver, query)\n",
-    "# pprint(result)                                                         ## Time of Execution: 0.0s\n"
+    "# pprint(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6380,7 +6382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -6388,20 +6390,36 @@
      "output_type": "stream",
      "text": [
       "\n",
-      ":small_blue_diamond: BEFORE Optimization - Find Strongest Beers :small_blue_diamond:\n",
+      "🔹 BEFORE Optimization - Find Strongest Beers 🔹\n",
       "Database Hits (DbHits): 0\n",
       "Cache Hits (PageCacheHits): 0\n",
       "Estimated Rows: 5.0\n",
       "Actual Rows Returned: 5\n",
       "\n",
       "\n",
-      ":small_blue_diamond: AFTER Optimization - Find Strongest Beers :small_blue_diamond:\n",
+      " 1st Result: \n",
+      "[<Record beerName='Snake Venom' abv=67.5 breweryName='Brewmeister'>,\n",
+      " <Record beerName='series 3' abv=66.0 breweryName='Redline Brewhouse'>,\n",
+      " <Record beerName='Armageddon' abv=65.0 breweryName='Brewmeister'>,\n",
+      " <Record beerName='Start The Future' abv=60.0 breweryName=\"Brouwerij 't Koelschip\">,\n",
+      " <Record beerName='Schorschbräu Schorschbock 57%' abv=57.5 breweryName='Schorschbräu'>]\n",
+      "\n",
+      "🔹 AFTER Optimization - Find Strongest Beers 🔹\n",
       "Database Hits (DbHits): 0\n",
       "Cache Hits (PageCacheHits): 0\n",
       "Estimated Rows: 0.0\n",
       "Actual Rows Returned: 5\n",
       "\n",
-      ":small_red_triangle_down: PERFORMANCE COMPARISON :small_red_triangle_down:\n",
+      "\n",
+      " 2nd Result: \n",
+      "[<Record beerName='Snake Venom' abv=67.5 breweryName='Brewmeister'>,\n",
+      " <Record beerName='series 3' abv=66.0 breweryName='Redline Brewhouse'>,\n",
+      " <Record beerName='Armageddon' abv=65.0 breweryName='Brewmeister'>,\n",
+      " <Record beerName='Start The Future' abv=60.0 breweryName=\"Brouwerij 't Koelschip\">,\n",
+      " <Record beerName='Schorschbräu Schorschbock 57%' abv=57.5 breweryName='Schorschbräu'>]\n",
+      "\n",
+      "\n",
+      "🔻 PERFORMANCE COMPARISON 🔻\n",
       "DbHits: 0 ➝ 0\n",
       "CacheHits: 0 ➝ 0\n",
       "EstimatedRows: 5.0 ➝ 0.0\n",
@@ -6412,11 +6430,15 @@
    "source": [
     "# Run queries and compare performance\n",
     "before_metrics = profile_query(query_before, \"BEFORE Optimization - Find Strongest Beers\")\n",
+    "print(\"\\n 1st Result: \")\n",
+    "pprint(execute_read(driver, query_before))\n",
     "create_index(driver, \"BEERS\", \"abv\")\n",
     "after_metrics = profile_query(query_after, \"AFTER Optimization - Find Strongest Beers\")\n",
+    "print(\"\\n 2nd Result: \")\n",
+    "pprint(execute_read(driver, query_after))\n",
     "\n",
     "# Print comparison\n",
-    "print(\":small_red_triangle_down: PERFORMANCE COMPARISON :small_red_triangle_down:\")\n",
+    "print(\"\\n\\n🔻 PERFORMANCE COMPARISON 🔻\")\n",
     "for key in before_metrics.keys():\n",
     "    if key != \"Description\":\n",
     "        print(f\"{key}: {before_metrics[key]} ➝ {after_metrics[key]}\")"
@@ -6438,18 +6460,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 5 styles by smell + feel (optimized):\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#     4.2. Using the answer from question 2 \n",
     "#               find the top 5 distict beer styles with \n",
@@ -6459,7 +6472,7 @@
     "\n",
     "# query = \"\"\"\n",
     "#     PROFILE\n",
-    "    \n",
+    "\n",
     "#     // 1st Match: Find the reviews of the third most productive user (name: 'kylehay2004' based on question 3.2)\n",
     "#     MATCH (u:USER {name: 'kylehay2004'})<-[:POSTED]-(r:REVIEWS)\n",
     "#     WHERE r.smell IS NOT NULL AND r.feel IS NOT NULL\n",
@@ -6474,8 +6487,7 @@
     "# \"\"\"\n",
     "# result = execute_read(driver, query)\n",
     "# print(\"Top 5 styles by smell + feel (unoptimized):\")\n",
-    "# pprint(result)                                                          ## Time of Execution: 5s\n",
-    "\n",
+    "# pprint(result)\n",
     "\n",
     "# # Create an index on the name property of the USER nodes & the smell and feel properties of the REVIEWS nodes & the style property of the STYLE nodes\n",
     "# # Source: https://neo4j.com/docs/cypher-manual/current/indexes/syntax/\n",
@@ -6489,35 +6501,24 @@
     "#     result = execute_write(driver, query)\n",
     "#     pprint(result)\n",
     "\n",
-    "# After Optimization (Indexes + Query Optimization)\n",
-    "query = \"\"\"\n",
-    "    PROFILE\n",
-    "    MATCH (u:USER {name: 'kylehay2004'})-[:POSTED]->(r:REVIEWS)-[:REVIEWED]->(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
-    "    WHERE r.smell IS NOT NULL AND r.feel IS NOT NULL\n",
-    "    WITH s.name AS styleName, toFloat(r.smell) + toFloat(r.feel) AS smellFeel\n",
-    "    RETURN styleName, avg(smellFeel) AS avgSmellFeel\n",
-    "    ORDER BY avgSmellFeel DESC\n",
-    "    LIMIT 5\n",
-    "\"\"\"\n",
-    "result = execute_read(driver, query)\n",
-    "print(\"Top 5 styles by smell + feel (optimized):\")\n",
-    "pprint(result)                                                          ## Time of Execution: 0.3s  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "\n",
-    "# **Não percebi oq aconteceu aqui, mas deixou de funcionar**\n",
-    "\n",
-    "</div>"
+    "# # After Optimization (Indexes + Query Optimization)\n",
+    "# query = \"\"\"\n",
+    "#     PROFILE\n",
+    "#     MATCH (u:USER {name: 'kylehay2004'})<-[:POSTED]-(r:REVIEWS)<-[:REVIEWED]-(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
+    "#     WHERE r.smell IS NOT NULL AND r.feel IS NOT NULL\n",
+    "#     WITH s.name AS styleName, toFloat(r.smell) + toFloat(r.feel) AS smellFeel\n",
+    "#     RETURN styleName, avg(smellFeel) AS avgSmellFeel\n",
+    "#     ORDER BY avgSmellFeel DESC\n",
+    "#     LIMIT 5\n",
+    "# \"\"\"\n",
+    "# result = execute_read(driver, query)\n",
+    "# print(\"Top 5 styles by smell + feel (optimized):\")\n",
+    "# pprint(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6541,14 +6542,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Query AFTER Optimization\n",
     "query_after_2 = \"\"\"\n",
     "    PROFILE\n",
-    "    MATCH (u:USER {name: 'kylehay2004'})-[:POSTED]->(r:REVIEWS)-[:REVIEWED]->(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
+    "    MATCH (u:USER {name: 'kylehay2004'})<-[:POSTED]-(r:REVIEWS)<-[:REVIEWED]-(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
     "    WHERE r.smell IS NOT NULL AND r.feel IS NOT NULL\n",
     "    WITH s.name AS styleName, toFloat(r.smell) + toFloat(r.feel) AS smellFeel\n",
     "    RETURN styleName, avg(smellFeel) AS avgSmellFeel\n",
@@ -6559,7 +6560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -6567,38 +6568,58 @@
      "output_type": "stream",
      "text": [
       "\n",
-      ":small_blue_diamond: BEFORE Optimization - Find Top Beer Styles by Smell + Feel :small_blue_diamond:\n",
+      "🔹 BEFORE Optimization - Find Top Beer Styles by Smell + Feel 🔹\n",
       "Database Hits (DbHits): 0\n",
       "Cache Hits (PageCacheHits): 0\n",
-      "Estimated Rows: 2.6344468990378664\n",
+      "Estimated Rows: 5.0\n",
       "Actual Rows Returned: 5\n",
       "\n",
       "\n",
-      ":small_blue_diamond: AFTER Optimization - Find Top Beer Styles by Smell + Feel :small_blue_diamond:\n",
+      " 1st Results:\n",
+      "[<Record s.name='New England IPA' avgSmellFeel=8.654761904761903>,\n",
+      " <Record s.name='American Imperial Stout' avgSmellFeel=8.546363636363628>,\n",
+      " <Record s.name='Bière de Champagne / Bière Brut' avgSmellFeel=8.5>,\n",
+      " <Record s.name='Belgian Fruit Lambic' avgSmellFeel=8.444444444444445>,\n",
+      " <Record s.name='Belgian Gueuze' avgSmellFeel=8.42857142857143>]\n",
+      "\n",
+      "🔹 AFTER Optimization - Find Top Beer Styles by Smell + Feel 🔹\n",
       "Database Hits (DbHits): 0\n",
       "Cache Hits (PageCacheHits): 0\n",
-      "Estimated Rows: 1.0774315131879708e-12\n",
-      "Actual Rows Returned: 0\n",
+      "Estimated Rows: 5.0\n",
+      "Actual Rows Returned: 5\n",
       "\n",
-      ":small_red_triangle_down: PERFORMANCE COMPARISON :small_red_triangle_down:\n",
+      "\n",
+      " 2nd Results:\n",
+      "[<Record styleName='New England IPA' avgSmellFeel=8.654761904761903>,\n",
+      " <Record styleName='American Imperial Stout' avgSmellFeel=8.546363636363628>,\n",
+      " <Record styleName='Bière de Champagne / Bière Brut' avgSmellFeel=8.5>,\n",
+      " <Record styleName='Belgian Fruit Lambic' avgSmellFeel=8.444444444444445>,\n",
+      " <Record styleName='Belgian Gueuze' avgSmellFeel=8.42857142857143>]\n",
+      "\n",
+      "\n",
+      "🔻 PERFORMANCE COMPARISON 🔻\n",
       "DbHits: 0 ➝ 0\n",
       "CacheHits: 0 ➝ 0\n",
-      "EstimatedRows: 2.6344468990378664 ➝ 1.0774315131879708e-12\n",
-      "RowsReturned: 5 ➝ 0\n"
+      "EstimatedRows: 5.0 ➝ 5.0\n",
+      "RowsReturned: 5 ➝ 5\n"
      ]
     }
    ],
    "source": [
     "# Run queries and compare performance\n",
     "before_metrics_2 = profile_query(query_before_2, \"BEFORE Optimization - Find Top Beer Styles by Smell + Feel\")\n",
+    "print(\"\\n 1st Results:\")\n",
+    "pprint(execute_read(driver, query_before_2))\n",
     "create_index(driver, \"USER\", \"name\")\n",
     "create_index(driver, \"REVIEWS\", \"smell\")\n",
     "create_index(driver, \"REVIEWS\", \"feel\")\n",
     "create_index(driver, \"STYLE\", \"name\")\n",
     "after_metrics_2 = profile_query(query_after_2, \"AFTER Optimization - Find Top Beer Styles by Smell + Feel\")\n",
+    "print(\"\\n 2nd Results:\")\n",
+    "pprint(execute_read(driver, query_after_2))\n",
     "\n",
     "# Print comparison\n",
-    "print(\":small_red_triangle_down: PERFORMANCE COMPARISON :small_red_triangle_down:\")\n",
+    "print(\"\\n\\n🔻 PERFORMANCE COMPARISON 🔻\")\n",
     "for key in before_metrics_2.keys():\n",
     "    if key != \"Description\":\n",
     "        print(f\"{key}: {before_metrics_2[key]} ➝ {after_metrics_2[key]}\")"
@@ -6649,7 +6670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -6673,7 +6694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
